# terraria3d

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  meson.build
assets/: data.json
assets/shaders/: debug_frag.glsl  debug_vert.glsl  frag.glsl  framebuffer_frag.glsl  framebuffer_vert.glsl  vert.glsl
scripts/: lut.py
src/: chunk.cpp  chunk.hpp  core.cpp  core.hpp  debug.hpp  entity.hpp  game.cpp  game.hpp  gameobjects.cpp  gameobjects.hpp  glw.cpp  glw.hpp  heap_array.hpp  int.hpp  main.cpp  surface_nets.cpp  surface_nets.hpp  terrain.cpp  terrain.hpp
tests/maps/: 1.terrain
